--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
   <body>
     <h1>EcmaScript Specification Examples</h1>
-    <script src="src/index.js"></script>
+    <script src="src/reflection/only-number-property.js"></script>
   </body>
 </html>
