--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
   <body>
     <h1>EcmaScript Specification Examples</h1>
-    <script src="src/async/async-await.js"></script>
+    <script src="src/features/observables.js"></script>
   </body>
 </html>
