--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
 
   <body>
-    <h1>EcmaScript Specification Examples</h1>
+    <h1 id="title">EcmaScript Specification Examples</h1>
+    <button id="button">Example button</button>
     <script src="src/functions/basics.js"></script>
   </body>
 </html>
