--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1 id="title">EcmaScript Specification Examples</h1>
     <button id="button">Example button</button>
-    <script src="src/async/await-default-behavior.js"></script>
+    <script src="src/async/for-await-of.js"></script>
   </body>
 </html>
